# cove-vantage

./: API.md  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
backend/: cache.py  circuit_breaker.py  config.py  council.py  database.py  intent_classifier.py  judge.py  main.py  metrics.py  migration.py  models.py  openrouter.py  rate_limiter.py  storage.py  tool_orchestrator.py  workflows.py
backend/rag/: __init__.py  embeddings.py  ingestor.py  style_guide.py  vector_store.py
backend/tools/: __init__.py  base.py  calculator.py  code_execution.py  rag_search.py  registry.py  sports_data.py  web_search.py
frontend/src/: App.jsx  api.js
frontend/src/components/: ChatInterface.jsx  CostDashboard.css  CostDashboard.jsx  IntentBadge.css  IntentBadge.jsx  LoadingIndicator.css  LoadingIndicator.jsx  Sidebar.jsx  WorkspaceSettings.css  WorkspaceSettings.jsx
