[project]
name = "cove"
version = "0.3.0"
description = "Project Cove - Multi-Model AI Orchestration Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0.0",
    # Phase 2: Tools & RAG
    "qdrant-client>=1.7.0",
    "pypdf>=3.17.0",
    "beautifulsoup4>=4.12.0",
]
